<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        
        <variable
            name="listener"
            type="com.example.weather.view.WeatherDetailsFragmentListener" />
        
        <variable
            name="model"
            type="com.example.weather.model.WeatherModel" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <include
            android:id="@+id/toolbar_weatherDetails"
            layout="@layout/layout_toolbar_weather_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_weatherDetails_weatherIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="12dp"
            android:imageUrl="@{model.weatherIconUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_weatherDetails"
            tools:src="@drawable/ic_weather_loading_error" />
    
    
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_weatherDetails_weatherTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@{model.weatherTitle}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_weatherDetails_weatherIcon"
            tools:text="Clouds, broken clouds" />
        
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_weatherDetails_locationIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_baseline_location"
            app:layout_constraintStart_toStartOf="@id/imageView_weatherDetails_weatherIcon"
            app:layout_constraintEnd_toStartOf="@id/textView_weatherDetails_location"
            app:layout_constraintTop_toBottomOf="@id/textView_weatherDetails_weatherTitle" />
        
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_weatherDetails_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{model.location}"
            app:layout_constraintBottom_toBottomOf="@id/imageView_weatherDetails_locationIcon"
            app:layout_constraintStart_toEndOf="@id/imageView_weatherDetails_locationIcon"
            app:layout_constraintTop_toTopOf="@id/imageView_weatherDetails_locationIcon"
            tools:text="Mashhad, IR" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_weatherDetails_locationIcon">
            
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="10"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp">
                
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">
                    
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView_weatherDetails_temperature"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_weather_temperature"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_weatherDetails_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@{model.temperatureWithDegree}"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageView_weatherDetails_temperature"
                        tools:text="21\u2103" />
                    
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_weatherDetails_temperatureTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/temperature"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView_weatherDetails_temperature" />
                
                </androidx.constraintlayout.widget.ConstraintLayout>
            
            </com.google.android.material.card.MaterialCardView>
            
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="10"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp">
                
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">
                    
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView_weatherDetails_wind"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_weather_wind"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_weatherDetails_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@{model.windSpeed}"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageView_weatherDetails_wind"
                        tools:text="21 m/s" />
                    
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_weatherDetails_windTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/wind"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView_weatherDetails_wind" />
                
                </androidx.constraintlayout.widget.ConstraintLayout>
            
            </com.google.android.material.card.MaterialCardView>
    
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="10"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp">
        
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">
            
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView_weatherDetails_humidity"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_weather_humidity"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
            
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_weatherDetails_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@{model.humidity}"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageView_weatherDetails_humidity"
                        tools:text="26%" />
            
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_weatherDetails_humidityTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/humidity"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView_weatherDetails_humidity" />
        
                </androidx.constraintlayout.widget.ConstraintLayout>
    
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_weatherDetails_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() -> listener.save()}"
            android:text="@string/save_city"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_weatherDetails_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/oops_something_went_wrong_while_loading"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/oops_something_went_wrong_while_loading"
            tools:visibility="gone" />
        
        <ProgressBar
            android:id="@+id/progressBar_weatherDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>